--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.4.0",
     "bootstrap": "^5.3.0",
     "formik": "^2.4.2",
+    "normalize.css": "^8.0.1",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
@@ -24,19 +25,26 @@
     "react-image-zoom": "^1.3.1",
     "react-rating-stars-component": "^2.2.0",
     "react-redux": "^8.1.1",
+    "react-responsive-carousel": "^3.2.23",
     "react-router": "^6.13.0",
     "react-router-dom": "^6.13.0",
+    "react-slick": "^0.29.0",
     "react-toastify": "^9.1.3",
+    "slick-carousel": "^1.8.1",
+    "swiper": "^10.0.3",
     "yup": "^1.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react": "^4.0.0",
+    "autoprefixer": "^10.4.14",
     "eslint": "^8.41.0",
     "eslint-plugin-react": "^7.25.3",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
+    "postcss": "^8.4.25",
+    "tailwindcss": "^3.3.2",
     "vite": "^4.3.2"
   }
 }
