--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "normalize.css": "^8.0.1",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
+    "react-animated-checkbox": "^0.1.4",
     "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
     "react-fast-marquee": "^1.6.0",
