--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.4.0",
     "bootstrap": "^5.3.0",
+    "dompurify": "^3.0.5",
     "formik": "^2.4.2",
     "mdb-react-ui-kit": "^6.1.0",
     "normalize.css": "^8.0.1",
