--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dompurify": "^3.0.5",
     "formik": "^2.4.2",
     "mdb-react-ui-kit": "^6.1.0",
+    "moment": "^2.29.4",
     "normalize.css": "^8.0.1",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
