--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "mdb-react-ui-kit": "^6.1.0",
     "moment": "^2.29.4",
     "normalize.css": "^8.0.1",
+    "photoswipe": "^5.3.8",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-animated-checkbox": "^0.1.4",
@@ -28,6 +29,7 @@
     "react-helmet": "^6.1.0",
     "react-icons": "^4.10.1",
     "react-image-zoom": "^1.3.1",
+    "react-medium-image-zoom": "^5.1.6",
     "react-multi-carousel": "^2.8.4",
     "react-rating-stars-component": "^2.2.0",
     "react-redux": "^8.1.1",
