--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "react-slick": "^0.29.0",
     "react-toastify": "^9.1.3",
     "slick-carousel": "^1.8.1",
+    "square": "^29.0.0",
+    "stripe": "^12.16.0",
     "swiper": "^10.0.3",
     "yup": "^1.2.0"
   },
