--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "square": "^29.0.0",
     "stripe": "^12.16.0",
     "swiper": "^10.0.3",
+    "uuid": "^9.0.0",
     "yup": "^1.2.0"
   },
   "devDependencies": {
